# findora-poker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
barnett-smart-card-protocol/: Cargo.toml
barnett-smart-card-protocol/examples/: murder.rs  parameter_selection.rs  round.rs  web3.rs
barnett-smart-card-protocol/src/: lib.rs
barnett-smart-card-protocol/src/discrete_log_cards/: masking.rs  mod.rs  remasking.rs  reveal.rs  tests.rs
doc/: poker_wasm.rs
proof-essentials/: Cargo.toml
proof-essentials/benches/: shuffle.rs
proof-essentials/src/homomorphic_encryption/: mod.rs
proof-essentials/src/homomorphic_encryption/el_gamal/: mod.rs  tests.rs
proof-essentials/src/homomorphic_encryption/el_gamal/arithmetic_definitions/: ciphertext.rs  plaintext.rs
proof-essentials/src/utils/: permutation.rs  rand.rs  vector_arithmetic.rs
proof-essentials/src/vector_commitment/: mod.rs
proof-essentials/src/vector_commitment/pedersen/: mod.rs  tests.rs
proof-essentials/src/vector_commitment/pedersen/arithmetic_definitions/: commitment.rs
proof-essentials/src/zkp/: mod.rs  transcript.rs
proof-essentials/src/zkp/arguments/: mod.rs
proof-essentials/src/zkp/arguments/hadamard_product/: mod.rs  proof.rs  prover.rs  tests.rs
proof-essentials/src/zkp/arguments/matrix_elements_product/: mod.rs  proof.rs  prover.rs  tests.rs
proof-essentials/src/zkp/arguments/multi_exponentiation/: mod.rs  proof.rs  prover.rs  tests.rs
proof-essentials/src/zkp/arguments/shuffle/: mod.rs  proof.rs  prover.rs  tests.rs
proof-essentials/src/zkp/arguments/single_value_product/: mod.rs  proof.rs  prover.rs  tests.rs
proof-essentials/src/zkp/arguments/zero_value_bilinear_map/: mod.rs  proof.rs  prover.rs  tests.rs
proof-essentials/src/zkp/proofs/chaum_pedersen_dl_equality/: mod.rs  proof.rs  prover.rs  test.rs
proof-essentials/src/zkp/proofs/schnorr_identification/: mod.rs  proof.rs  prover.rs  test.rs
