[package]
name = "barnett-smart-card-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-marlin = "0.3.0"
ark-serialize = "0.3.0"
ark-std = { version = "0.3.0", features = ["std"] }
blake2 = { version = "0.9", default-features = false }
merlin = "3.0.0"
proof-essentials = { path = "../proof-essentials"}
rand = "0.8.4"
thiserror = "1.0.30"

[dev-dependencies]
ark-bn254 = "0.3.0"

[[example]]
name = "round"
