[package]
name = "barnett-smart-card-protocol"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", features = ["std"] }
blake2 = { version = "0.10", default-features = false }
merlin = "3.0.0"
proof-essentials = { path = "../proof-essentials"}
rand = "0.8.4"
thiserror = "1.0.30"
base64 = "0.12"

[dev-dependencies]
ark-bn254 = "0.4.0"

[[example]]
name = "round"

[features]
default = [ "parallel" ]
parallel = [ "ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel" ]