[package]
name = "proof-essentials"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-marlin = "0.3.0"
ark-serialize = "0.3.0"
ark-std = { version = "0.3.0", features = ["std"] }
merlin = "3.0.0"
rand = "0.8.4"
thiserror = "1.0.30"
blake2 = { version = "0.9", default-features = false }
digest = { version = "0.9" }
rand_chacha = { version = "0.3.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = "0.4"
ark-bn254 = "0.3.0"
wasm-bindgen-test = "0.3.29"

[[bench]]
name = "shuffle"
harness = false
