[package]
name = "proof-essentials"
version = "0.2.0"
edition = "2021"

[dependencies]
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = { version = "0.4.0", features = ["derive"] }
ark-std = { version = "0.4.0", features = ["std"] }
merlin = "3.0.0"
rand = "0.8.4"
thiserror = "1.0.30"
blake2 = { version = "0.10", default-features = false }
digest = { version = "0.10" }
rand_chacha = { version = "0.3.0", default-features = false }
base64 = "0.12"
hex = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = "0.4"
ark-bn254 = "0.4.0"
wasm-bindgen-test = "0.3.29"

[[bench]]
name = "shuffle"
harness = false

[features]
default = [ "parallel" ]
parallel = [ "ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel" ]